# VisioFlow-QR

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
DOCs/: Architecture.md  Capture.md  Daemon-and-IPC.md  Distribution-Windows.md  ENGINE_RULES.md  Getting-Started.md  Handoff-Router-Phase.md  IPC_PROTOCOL.md  Notifications-Windows.md  PLATFORM_CI.md  README.md  Routing-And-Default-Rules.md  Rules-CLI.md  Rust OpenCV QR Scanning Architecture.md  USER_GUIDE.md
assets/: Logo.af  default-rules.json  new logo.af
crates/visioflow-cli/: Cargo.toml  build.rs
crates/visioflow-cli/src/: capture.rs  decode_worker.rs  lib.rs  main.rs  manual_exposure.rs  notifications.rs  preview_overlay.rs  screen_bounds.rs  webcam_exposure.rs  webcam_preview.rs  webcam_session.rs
crates/visioflow-cli/src/commands/: capture.rs  daemon.rs  exec.rs  mod.rs  notify.rs  rule.rs
crates/visioflow-cli/tests/: capture_halts.rs  capture_routing.rs  capture_stdout.rs  capture_trigger.rs  notify_smoke.rs  rule_crud.rs  rule_execute.rs  rule_init_defaults.rs
crates/visioflow-core/: Cargo.toml
crates/visioflow-core/src/: airgap.rs  capture.rs  error.rs  lib.rs  share.rs  traits.rs
crates/visioflow-core/src/decode/: bracket.rs  ev_comp.rs  hybrid.rs  live.rs  mod.rs  qr.rs  qr_test.rs  rxing.rs
crates/visioflow-core/src/export/: export_test.rs  mod.rs
crates/visioflow-core/src/ipc/: handler.rs  handler_test.rs  mod.rs  paths.rs  transport.rs  transport_test.rs
crates/visioflow-core/src/logging/: mod.rs  redact.rs  redact_test.rs
crates/visioflow-core/src/native/: geo.rs  geo_test.rs  keys.rs  keys_test.rs  mailto.rs  mailto_test.rs  mod.rs  tel.rs  tel_test.rs  uri.rs  uri_test.rs  vcard.rs  vcard_test.rs  wifi.rs  wifi_test.rs
crates/visioflow-core/src/opencv_webcam/: bracket.rs  exposure_hal.rs  exposure_probe.rs  exposure_table.rs  frame_stream.rs  mod.rs  models.rs  models_test.rs  scanner.rs  wechat_decoder.rs
crates/visioflow-core/src/optical/: downsample.rs  downsample_test.rs  mod.rs  otsu.rs  otsu_test.rs  pipeline.rs  pipeline_test.rs  tone.rs
crates/visioflow-core/src/rules/: actions.rs  auto.rs  auto_test.rs  builtins.rs  builtins_test.rs  engine.rs  engine_test.rs  error.rs  mod.rs  model.rs  notify.rs  notify_test.rs  store.rs  store_test.rs
crates/visioflow-core/src/sys/: linux.rs  mod.rs  windows.rs
models/: README.md
patches/nokhwa/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  flake.nix
patches/nokhwa-bindings-windows/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
patches/nokhwa-bindings-windows/src/: lib.rs
patches/nokhwa/src/: camera.rs  js_camera.rs  lib.rs  query.rs
patches/nokhwa/src/backends/capture/: avfoundation.rs  msmf_backend.rs  opencv_backend.rs
scripts/: bootstrap-portable.ps1  build-release.ps1  dev-env.ps1  download-wechat-models.ps1  download-wechat-models.sh  install-shortcuts.ps1  install-traditional.ps1  smoke-default-rules.ps1  smoke-distribution.ps1  smoke-notify.ps1  smoke-router.ps1  smoke-shortcuts.ps1  test-scoop-manifest.ps1
scripts/packaging/scoop/: README.md  visioflow.json
share/actions/: copy-text.ps1  copy-text.sh  open-geo.ps1  open-geo.sh  open-matmsg.ps1  open-matmsg.sh  open-tel.ps1  open-tel.sh  open-url.ps1  open-url.sh  wifi-handoff.ps1  wifi-handoff.sh
wiki/: CLI-Reference.md  Capture.md  Custom-Rules.md  Daemon-and-IPC.md  Default-Rules.md  Distribution-and-Release.md  Home.md  Installation.md  Notifications.md  Quick-Start.md  Routing-and-Auto-Route.md  WIKI-PUBLISH.md  _Sidebar.md
