[package]
name = "visioflow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "visioflow_cli"
path = "src/lib.rs"

[[bin]]
name = "visioflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
visioflow-core = { path = "../visioflow-core" }
thiserror = "2"
serde_json = "1"
image = "0.25"
arboard = "3"
xcap = "0.0.14"
nokhwa = { version = "0.10", features = ["input-native"] }
minifb = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
image = "0.25"
qrcode = "0.14"
tempfile = "3"
