[package]
name = "visioflow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "visioflow_cli"
path = "src/lib.rs"

[[bin]]
name = "visioflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
visioflow-core = { path = "../visioflow-core", features = ["opencv-webcam"] }
thiserror = "2"
serde_json = "1"
image = "0.25"
arboard = "3"
xcap = "0.0.14"
font8x8 = "0.3"
minifb = "0.28"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
image = "0.25"
qrcode = "0.14"
tempfile = "3"
