[package]
name = "visioflow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "visioflow_cli"
path = "src/lib.rs"

[[bin]]
name = "visioflow"
path = "src/main.rs"

[[bin]]
name = "visioflow-toast"
path = "src/bin/visioflow-toast.rs"

[features]
default = ["opencv-webcam"]
opencv-webcam = ["visioflow-core/opencv-webcam"]

[dependencies]
clap = { version = "4", features = ["derive"] }
visioflow-core = { path = "../visioflow-core" }
thiserror = "2"
serde_json = "1"
image = "0.25"
arboard = "3"
xcap = "0.0.14"
font8x8 = "0.3"
minifb = "0.28"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }
windows = { version = "0.58", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
image = "0.25"
qrcode = "0.14"
tempfile = "3"
visioflow-core = { path = "../visioflow-core" }
serde_json = "1"
