[package]
name = "visioflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image = "0.25"
imageproc = "0.25"
rqrr = "0.7"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rxing = "0.9.1"

[target.'cfg(unix)'.dependencies]
nix = "0.29"

[dev-dependencies]
mockall = "0.13"
qrcode = "0.14"
