[package]
name = "visioflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
opencv-webcam = ["dep:opencv"]

[dependencies]
image = "0.25"
imageproc = "0.25"
rqrr = "0.7"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "6"
interprocess = "2.2"
rxing = "0.9.1"
opencv = { version = "0.98", optional = true, default-features = false, features = ["videoio", "wechat_qrcode", "imgproc", "clang-runtime"] }

[target.'cfg(unix)'.dependencies]
nix = "0.29"

[dev-dependencies]
mockall = "0.13"
qrcode = "0.14"
tempfile = "3"
